fix playlist overflow

--- a/src/components/UltraPlayer/UltraPlayer.scss
+++ b/src/components/UltraPlayer/UltraPlayer.scss
@@ -109,7 +109,7 @@ $ico_svg_color_h: white;
 }
 
 #playlist {
-    max-height: 500px;
+    max-height: 450px;
     display: none;
 }
 
